unpackaged/main/default/objects/Record_Sync__c/fields/Record_Sync_Run__c.field-meta.xml
<CustomField>
    <fullName>Record_Sync_Run__c</fullName>
    <label>Record Sync Run</label>
    <referenceTo>Record_Sync_Run__c</referenceTo>
    <relationshipLabel>Records Sync</relationshipLabel>
    <relationshipName>Records_Sync</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>