unpackaged/main/default/objects/Record_Sync__c/fields/Source_Record__c.field-meta.xml
<CustomField>
    <fullName>Source_Record__c</fullName>
    <label>Source Record</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>