unpackaged/main/default/objects/Record_Sync__c/fields/Target_Record__c.field-meta.xml
<CustomField>
    <fullName>Target_Record__c</fullName>
    <label>Target Record</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>